Fixed MAGETWO-9504: [Electron]: White space appears on the bottom of not home pages

--- a/app/design/frontend/magento2/electron/css/styles.less
+++ b/app/design/frontend/magento2/electron/css/styles.less
@@ -308,11 +308,8 @@ html, body, button, input, select, textarea {
 }
 
 body {
-    padding-bottom: 0;
-}
-
-.page.wrapper {
     background: url(../images/bg_page.png) repeat #2f2f38;
+    padding-bottom: 0;
 }
 
 @link : #9ba4ad;
